--- a/Kleurmodellen.html
+++ b/Kleurmodellen.html
@@ -1,1 +1,20 @@
-<!Doctype HtMl> <! --Di
+<!Doctype HtMl> <! --Dit is de homepage van mijn site-->
+<html> <dit is het html element-->
+  <head>
+    <title>het eerste begin</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    uitleg over kleurmodellen
+
+    <br>
+    <ul>
+      <li><a href="index.html"> Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">kleurmodellen</a></li>
+    </ul>
+
+    <img src=" #afb" alt="deze site is nog niet af"
+      
+  </body>
+  </html>
