--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     hier komt mijn eerste tekst
     <a href="binairstelsel.html"> Uitleg binair stelsel </a>
+    <a href="kleurmodellen"> Uitleg kleurmodellen </a>
   </body>
 </html>
