--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,5 +7,6 @@
   <body>
     uitleg over het binaire stelsel
     <a href="index.html">Home</a> <!--link terug naar de homepage-->
+    <a href="index.html">Home</a> <!--link terug naar de homepage-->
   </body>
 </html>
