--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -3,10 +3,10 @@
   <head>
     <title>Binair stelsel</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
     uitleg over het binaire stelsel
-    <a href="index.html">Home</a> <!--link terug naar de homepage-->
-    <a href="index.html">Home</a> <!--link terug naar de homepage-->
+    <a href="index.html">Home</a> <!--link terug naar de homepage-->  
   </body>
 </html>
