--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html"> Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+    </ul>
     uitleg over het binaire stelsel
     <a href="index.html">Home</a> <!--link terug naar de homepage-->  
   </body>
