--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <ul>
+      <li><a href="index.html"> Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+    </ul>
     hier komt mijn eerste tekst
     <a href="binairstelsel.html"> Uitleg binair stelsel </a>
     <a href="kleurmodellen"> Uitleg kleurmodellen </a>
