--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <br>
     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
     uitleg over het binaire stelsel
   </body>
