--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
-    <ul>
+     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
     hier komt mijn eerste tekst
   </body>
