--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -9,9 +9,10 @@
     uitleg over kleurmodellen
 
     <br>
-    <ul>
+     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
 
     <img src=" #afb" alt="deze site is nog niet af"
