--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
-    hier komt mijn eerste tekst
+    Hallo en welkom op mijn website, ik ben Joël, 15 jaar en ik verschillende hobby's. Zoals: zeilen, klussen en scouting.
   </body>
 </html>
