--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
-    Hallo en welkom op mijn website, ik ben Joël, 15 jaar en ik verschillende hobby's. Zoals: zeilen, klussen en scouting.
+    Welkom op mijn website
+    Naam: Joël
+    Leeftijd: 15 jaar
+    Woonplaats: Veenendaal
+    Hobby's: Zeilen, klussen, scouting en met vrienden afspreken.
   </body>
 </html>
