--- a/informatie.html
+++ b/informatie.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html> <!--dit is de derde pagina van mijn site-->
+<html> <!--dit is het html element-->
+  <head>
+    <title>Werking computer</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
+  </head>
+  <body>
+    <br>
+    <ul>
+      <li><a href="index.html"> Home</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+    </ul>
+    Een computer voert zijn taken uit door een reeks processen te doorlopen, namelijk invoer, verwerking, uitvoer en opslag. Elk van deze stappen speelt een cruciale rol in hoe een computer werkt.
 
+1. Invoer (Input)
+De invoerfase is het proces waarbij gegevens en instructies aan de computer worden gegeven. Dit kan via verschillende invoerapparaten zoals toetsenborden, muizen, scanners, microfoons en camera's. Invoergegevens kunnen bijvoorbeeld tekst, geluid, afbeeldingen of andere vormen van informatie zijn.
+
+Voorbeelden van invoerapparaten:
+
+Toetsenbord: Voor het typen van tekst.
+Muis: Voor het aanwijzen en klikken op items op het scherm.
+Scanner: Voor het digitaliseren van fysieke documenten.
+Microfoon: Voor het opnemen van geluid.
+2. Verwerking (Processing)
+Verwerking is de kern van de computerwerking. Dit gebeurt in de centrale verwerkingseenheid (CPU). De CPU voert instructies uit die zijn verkregen uit het geheugen (RAM) en verwerkt de ingevoerde gegevens. Dit kan variëren van eenvoudige wiskundige berekeningen tot complexe operaties zoals het draaien van softwareprogramma's.
+
+Belangrijke onderdelen betrokken bij verwerking:
+
+CPU: De centrale verwerkingseenheid voert de bewerkingen uit.
+RAM: Het werkgeheugen waar tijdelijke gegevens en programma's worden opgeslagen tijdens het uitvoeren.
+Moederbord: Verbindt alle componenten van de computer en laat hen samenwerken.
+3. Uitvoer (Output)
+Na de verwerking moet de computer de resultaten weergeven of uitvoeren. Dit gebeurt via uitvoerapparaten zoals monitoren, printers, luidsprekers en projectoren. Uitvoer kan bijvoorbeeld een geprint document zijn, een geluidssignaal, een weergegeven beeld op het scherm of andere vormen van resultaten die voor de gebruiker zichtbaar of hoorbaar zijn.
+
+Voorbeelden van uitvoerapparaten:
+
+Monitor: Voor het weergeven van beelden en tekst.
+Printer: Voor het afdrukken van documenten.
+Luidsprekers: Voor het afspelen van geluid.
+Projector: Voor het projecteren van beelden op een groter scherm.
+4. Opslag (Storage)
+Opslag is de fase waarin gegevens permanent worden bewaard voor toekomstig gebruik. Opslagapparaten kunnen gegevens opslaan voor korte of lange termijn. Gegevens die op de harde schijf, SSD (Solid State Drive), USB-sticks of cloud-opslag worden geplaatst, kunnen later worden opgevraagd en gebruikt.
+
+Voorbeelden van opslagapparaten:
+
+Harde schijf (HDD): Mechanische schijven die grote hoeveelheden gegevens kunnen opslaan.
+Solid State Drive (SSD): Snellere en betrouwbaardere opslag dan traditionele harde schijven.
+USB-stick: Voor draagbare opslag.
+Cloud-opslag: Voor het opslaan van gegevens op externe servers via internet.
+  </body>
+</html>
