--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="index.html"> Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="informatie.html">werking computer</a></li>
     </ul>
     Welkom op mijn website
     Naam: Joël
