--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -12,6 +12,35 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
     </ul>
-    uitleg over het binaire stelsel
+    Het Binair Stelsel
+
+Het binair stelsel, ook wel het binaire getalsysteem genoemd, is een manier om getallen te representeren die alleen gebruik maakt van twee symbolen: 0 en 1. Dit systeem is de basis van digitale elektronica en computers, omdat deze machines werken met twee toestanden: aan (1) en uit (0).
+
+    Basisprincipes van het Binair Stelsel
+
+In tegenstelling tot het decimale stelsel, dat een basis van 10 heeft (met cijfers van 0 tot 9), heeft het binair stelsel een basis van 2. Dit betekent dat elke positie in een binair getal een macht van 2 vertegenwoordigt, in plaats van een macht van 10.
+
+    Voorbeeld van een binair getal:
+Het binaire getal 1101 kan als volgt worden geïnterpreteerd:
+
+| Positie  | 3 | 2 | 1 | 0 |
+|----------|---|---|---|---|
+| Binair   | 1 | 1 | 0 | 1 |
+
+Om dit om te zetten naar een decimaal getal, berekenen we de waarde van elke positie:
+
+\[ (1 \times 2^3) + (1 \times 2^2) + (0 \times 2^1) + (1 \times 2^0) = 8 + 4 + 0 + 1 = 13 \]
+
+Dus, het binaire getal 1101 is gelijk aan het decimale getal 13.
+
+  Waarom het Binair Stelsel?
+
+Computers gebruiken het binaire stelsel omdat het betrouwbaar en eenvoudig te implementeren is met digitale schakelingen. Elektronische componenten zoals transistors kunnen gemakkelijk twee toestanden representeren: aan (hoog voltage) en uit (laag voltage). Dit maakt het binaire stelsel ideaal voor het verwerken en opslaan van gegevens in computersystemen.
+
+  Meer Leren over Binair Stelsel
+
+Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan [Binary Bonanza](https://www.binarybonanza.com) voor verdere exploratie en leuke oefeningen.
+
+Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.
   </body>
 </html>
