--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -11,6 +11,7 @@
       <li><a href="index.html"> Home</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="informatie.html">werking computer</a></li>
     </ul>
     uitleg over kleurmodellen
     <img src=" #afb" alt="deze site is nog niet af"
