--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -13,7 +13,45 @@
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
     </ul>
-    uitleg over kleurmodellen
+    Inleiding tot Kleurmodellen
+Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren op verschillende apparaten, zoals computerschermen, printers en camera's. Twee veelgebruikte kleurmodellen zijn RGB en CMY-K. Deze modellen spelen een cruciale rol in digitale beeldbewerking en drukwerk.
+
+    Het RGB Kleurmodel
+Het RGB kleurmodel staat voor Rood, Groen en Blauw. Dit model wordt voornamelijk gebruikt in digitale schermen, zoals monitors, televisies en smartphones. RGB is een additief kleurmodel, wat betekent dat kleuren worden gecreëerd door licht toe te voegen.
+
+Rood (R), Groen (G) en Blauw (B) zijn de primaire kleuren.
+Door deze kleuren in verschillende intensiteiten te combineren, kunnen miljoenen verschillende kleuren worden geproduceerd.
+Als alle drie de kleuren op hun maximale intensiteit worden ingesteld, krijg je wit licht.
+    Voorbeeld van RGB:
+
+(255, 0, 0) is puur rood.
+(0, 255, 0) is puur groen.
+(0, 0, 255) is puur blauw.
+(255, 255, 255) is wit.
+Het CMY-K Kleurmodel
+Het CMY-K kleurmodel staat voor Cyaan, Magenta, Geel (Yellow) en Zwart (Key). Dit model wordt voornamelijk gebruikt in drukwerk. CMY-K is een subtractief kleurmodel, wat betekent dat kleuren worden gecreëerd door licht te verwijderen of te absorberen.
+
+Cyaan (C), Magenta (M) en Geel (Y) zijn de primaire kleuren in dit model.
+Zwart (K) wordt toegevoegd om diepere zwarttinten te bereiken en inkt te besparen.
+Door deze kleuren in verschillende hoeveelheden te mengen, kunnen verschillende kleuren worden gecreëerd.
+    Voorbeeld van CMY-K:
+
+(0, 100, 100, 0) is puur rood.
+(100, 0, 100, 0) is puur groen.
+(100, 100, 0, 0) is puur blauw.
+(0, 0, 0, 100) is zwart.
+    Pixels en Resolutie
+Om kleuren op digitale schermen weer te geven, worden pixels gebruikt. Een pixel is de kleinste eenheid van een digitaal beeld en kan een specifieke kleur weergeven.
+
+Pixels: Elke pixel op een scherm heeft een kleurwaarde die wordt bepaald door het RGB-kleurmodel.
+Resolutie: Resolutie verwijst naar het aantal pixels op een scherm. Het wordt meestal uitgedrukt als het aantal horizontale pixels bij het aantal verticale pixels (bijvoorbeeld 1920x1080).
+Een hogere resolutie betekent meer pixels en dus meer detail en scherpte in het beeld.
+
+    Voorbeeld van Resoluties:
+
+720p: 1280x720 pixels
+1080p (Full HD): 1920x1080 pixels
+4K (Ultra HD): 3840x2160 pixels
     <img src=" #afb" alt="deze site is nog niet af"
       
   </body>
