--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -12,6 +12,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
+      <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
     Het Binair Stelsel
 
