--- a/informatie.html
+++ b/informatie.html
@@ -12,7 +12,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
-
+      <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
     Een computer voert zijn taken uit door een reeks processen te doorlopen, namelijk invoer, verwerking, uitvoer en opslag. Elk van deze stappen speelt een cruciale rol in hoe een computer werkt.
 
