--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -12,6 +12,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
+      <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
     Inleiding tot Kleurmodellen
 Kleurmodellen zijn manieren om kleuren te beschrijven en te reproduceren op verschillende apparaten, zoals computerschermen, printers en camera's. Twee veelgebruikte kleurmodellen zijn RGB en CMY-K. Deze modellen spelen een cruciale rol in digitale beeldbewerking en drukwerk.
