--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -12,7 +12,7 @@
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
-      <li><a href="compressietechnieken.html">werking compressietechnieken</a></li>
+      <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
    Inleiding
 Beeld en geluid zijn essentieel in onze digitale wereld, en het begrijpen van hoe ze worden opgeslagen en verwerkt helpt ons de technologie beter te benutten. Deze pagina behandelt de opslag van beeld en geluid, de verschillen tussen bitmap- en vectorafbeeldingen, en relevante onderwerpen zoals sampling, sample rate en tekstcompressie.
