--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
-    Welkom op mijn website
+    <h1>Welkom op mijn website</h1>
     Naam: Joël
     
     Leeftijd: 15 jaar
