--- a/info.html
+++ b/info.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html> <!--dit is de eerste pagina van mijn site-->
+<html> <!--dit is het html element-->
+  <head>
+    <title>Binair stelsel</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
+  </head>
+  <body>
+    <ul>
+      <li><a href="index.html"> Home</a></li>
+      <li><a href="info.html"> over mij</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="informatie.html">werking computer</a></li>
+      <li><a href="compressietechnieken.html">compressietechnieken</a></li>
+    </ul>
+    Naam: Joël
+    Leeftijd: 15 jaar
+    Hobby's: Klussen, zeilen en scouting
+  </body>
+</html>
