--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,4 +1,4 @@
-<!Doctype HtMl> <! --Dit is de homepage van mijn site-->
+<!Doctype HtMl> <! --Dit is de vierde pagina van mijn site-->
 <html> <dit is het html element-->
   <head>
     <title>het eerste begin</title>
@@ -8,6 +8,7 @@
   <body>
        <ul>
       <li><a href="index.html"> Home</a></li>
+      <li><a href="info.html"> over mij</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
