--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,4 +1,4 @@
-<!Doctype HtMl> <! --Dit is de vierde pagina van mijn site-->
+<!Doctype HtMl> <! --Dit is de derde pagina van mijn site-->
 <html> <dit is het html element-->
   <head>
     <title>het eerste begin</title>
