--- a/informatie.html
+++ b/informatie.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!--dit is de derde pagina van mijn site-->
+<!DOCTYPE html> <!--dit is de vierde pagina van mijn site-->
 <html> <!--dit is het html element-->
   <head>
     <title>Werking computer</title>
@@ -8,6 +8,7 @@
   <body>
     <ul>
       <li><a href="index.html"> Home</a></li>
+      <li><a href="info.html"> over mij</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
