--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -14,11 +14,9 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
-    Het Binair Stelsel
-
-Het binair stelsel, ook wel het binaire getalsysteem genoemd, is een manier om getallen te representeren die alleen gebruik maakt van twee symbolen: 0 en 1. Dit systeem is de basis van digitale elektronica en computers, omdat deze machines werken met twee toestanden: aan (1) en uit (0).
-
-    Basisprincipes van het Binair Stelsel
+    <h1>Het binair stelsel</h1>
+    <p>Het binair stelsel, ook wel het binaire getalsysteem genoemd, is een manier om getallen te representeren die alleen gebruik maakt van twee symbolen: 0 en 1. Dit systeem is de basis van digitale elektronica en computers, omdat deze machines werken met twee toestanden: aan (1) en uit (0).</p>
+    <h2>Basisprincipes van het Binair Stelsel</h2>
 
 In tegenstelling tot het decimale stelsel, dat een basis van 10 heeft (met cijfers van 0 tot 9), heeft het binair stelsel een basis van 2. Dit betekent dat elke positie in een binair getal een macht van 2 vertegenwoordigt, in plaats van een macht van 10.
 
