--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
      <ul>
       <li><a href="index.html"> Home</a></li>
+      <li><a href="info.html"> over mij</a></li>
       <li><a href="binairstelsel.html">Binair stelsel</a></li>
       <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
       <li><a href="informatie.html">werking computer</a></li>
