--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -17,30 +17,20 @@
     <h1>Het binair stelsel</h1>
     <p>Het binair stelsel, ook wel het binaire getalsysteem genoemd, is een manier om getallen te representeren die alleen gebruik maakt van twee symbolen: 0 en 1. Dit systeem is de basis van digitale elektronica en computers, omdat deze machines werken met twee toestanden: aan (1) en uit (0).</p>
     <h2>Basisprincipes van het Binair Stelsel</h2>
-
-In tegenstelling tot het decimale stelsel, dat een basis van 10 heeft (met cijfers van 0 tot 9), heeft het binair stelsel een basis van 2. Dit betekent dat elke positie in een binair getal een macht van 2 vertegenwoordigt, in plaats van een macht van 10.
-
-    Voorbeeld van een binair getal:
-Het binaire getal 1101 kan als volgt worden geïnterpreteerd:
-
-| Positie  | 3 | 2 | 1 | 0 |
-|----------|---|---|---|---|
-| Binair   | 1 | 1 | 0 | 1 |
-
-Om dit om te zetten naar een decimaal getal, berekenen we de waarde van elke positie:
-
-\[ (1 \times 2^3) + (1 \times 2^2) + (0 \times 2^1) + (1 \times 2^0) = 8 + 4 + 0 + 1 = 13 \]
-
-Dus, het binaire getal 1101 is gelijk aan het decimale getal 13.
-
-  Waarom het Binair Stelsel?
-
-Computers gebruiken het binaire stelsel omdat het betrouwbaar en eenvoudig te implementeren is met digitale schakelingen. Elektronische componenten zoals transistors kunnen gemakkelijk twee toestanden representeren: aan (hoog voltage) en uit (laag voltage). Dit maakt het binaire stelsel ideaal voor het verwerken en opslaan van gegevens in computersystemen.
-
-  Meer Leren over Binair Stelsel
-
-Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan [Binary Bonanza](https://www.binarybonanza.com) voor verdere exploratie en leuke oefeningen.
-
-Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.
+    <p> in tegenstelling tot het decimale stelsel, dat een basis van 10 heeft (met cijfers van 0 tot 9), heeft het binair stelsel een basis van 2. Dit betekent dat elke positie in een binair getal een macht van 2 vertegenwoordigt, in plaats van een macht van 10.</p>
+    <h2>Voorbeeld van een binair getal:</h2>
+    <p>Het binaire getal 1101 kan als volgt worden geïnterpreteerd:</p>
+    <p>
+      | Positie  | 3 | 2 | 1 | 0 |
+      |----------|---|---|---|---|
+      | Binair   | 1 | 1 | 0 | 1 |
+      Om dit om te zetten naar een decimaal getal, berekenen we de waarde van elke positie:
+      \[ (1 \times 2^3) + (1 \times 2^2) + (0 \times 2^1) + (1 \times 2^0) = 8 + 4 + 0 + 1 = 13 \]
+      Dus, het binaire getal 1101 is gelijk aan het decimale getal 13.
+    </p>
+    <h2>Waarom het Binair Stelsel?</h2>
+    <p>Computers gebruiken het binaire stelsel omdat het betrouwbaar en eenvoudig te implementeren is met digitale schakelingen. Elektronische componenten zoals transistors kunnen gemakkelijk twee toestanden representeren: aan (hoog voltage) en uit (laag voltage). Dit maakt het binaire stelsel ideaal voor het verwerken en opslaan van gegevens in computersystemen.</p>
+    <h2>Meer Leren over Binair Stelsel</h2>
+    <p>Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan [Binary Bonanza](https://www.binarybonanza.com) voor verdere exploratie en leuke oefeningen. Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.</p>
   </body>
 </html>
