--- a/info.html
+++ b/info.html
@@ -14,8 +14,9 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
+    <h2>
     Naam: Joël
     Leeftijd: 15 jaar
-    Hobby's: Klussen, zeilen en scouting
+    Hobby's: Klussen, zeilen en scouting</h2>
   </body>
 </html>
