--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -14,48 +14,45 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
-   Inleiding
-Beeld en geluid zijn essentieel in onze digitale wereld, en het begrijpen van hoe ze worden opgeslagen en verwerkt helpt ons de technologie beter te benutten. Deze pagina behandelt de opslag van beeld en geluid, de verschillen tussen bitmap- en vectorafbeeldingen, en relevante onderwerpen zoals sampling, sample rate en tekstcompressie.
-
-  Beeldopslag
-  Bitmapafbeeldingen
-Bitmapafbeeldingen, ook bekend als rasterafbeeldingen, bestaan uit een raster van pixels. Elke pixel heeft een specifieke kleurwaarde, en samen vormen ze het volledige beeld.
-
-  Kenmerken van bitmapafbeeldingen:
-
+<h2>Inleiding</h2>
+<p>Beeld en geluid zijn essentieel in onze digitale wereld, en het begrijpen van hoe ze worden opgeslagen en verwerkt helpt ons de technologie beter te benutten. Deze pagina behandelt de opslag van beeld en geluid, de verschillen tussen bitmap- en vectorafbeeldingen, en relevante onderwerpen zoals sampling, sample rate en tekstcompressie.</p>
+<h2>Bitmapafbeeldingen</h2>
+<p>Bitmapafbeeldingen, ook bekend als rasterafbeeldingen, bestaan uit een raster van pixels. Elke pixel heeft een specifieke kleurwaarde, en samen vormen ze het volledige beeld.</p>
+<h3>Kenmerken van bitmapafbeeldingen:</h3>
+<p>
 Resolutie-afhankelijk: De kwaliteit van een bitmapafbeelding hangt af van de resolutie. Bij vergroting kunnen pixels zichtbaar worden, wat resulteert in verlies van scherpte.
 Bestandsformaten: Veelgebruikte formaten zijn JPEG, PNG, BMP en GIF.
-Voorbeeld: Foto's en digitale schilderijen.
-
-  Vectorafbeeldingen
-Vectorafbeeldingen zijn gebaseerd op geometrische vormen zoals lijnen, cirkels en polygonen. Ze worden beschreven met wiskundige formules in plaats van pixels.
-
-  Kenmerken van vectorafbeeldingen:
-
+</p>
+<h3>Voorbeeld: Foto's en digitale schilderijen.
+</h3>
+<p>Vectorafbeeldingen</p>
+<p>Vectorafbeeldingen zijn gebaseerd op geometrische vormen zoals lijnen, cirkels en polygonen. Ze worden beschreven met wiskundige formules in plaats van pixels.</p>
+<h3>Kenmerken van vectorafbeeldingen:</h3>
+<p>
 Resolutie-onafhankelijk: Vectorafbeeldingen kunnen zonder kwaliteitsverlies worden geschaald. Dit maakt ze ideaal voor logo's en illustraties.
 Bestandsformaten: Veelgebruikte formaten zijn SVG, AI en EPS.
 Voorbeeld: Logo's, iconen en technische tekeningen.
-
-  Geluidsopslag
-Sampling en Sample Rate
-Geluidsopslag in digitale vorm gebeurt door analoge geluidsgolven te digitaliseren via een proces dat "sampling" wordt genoemd. Dit betekent dat de geluidsgolf op vaste tijdsintervallen wordt gemeten en deze metingen worden opgeslagen als discrete waarden.
-
-Sampling: Het proces van het omzetten van analoge signalen naar digitale gegevens door metingen op regelmatige intervallen.
-Sample Rate: Het aantal metingen per seconde, uitgedrukt in Hertz (Hz). Een hogere sample rate resulteert in een nauwkeurigere reproductie van het oorspronkelijke geluid.
-Voorbeeld van sample rates:
-
+</p>
+<h3>Geluidsopslag</h3>
+<p>Geluidsopslag in digitale vorm gebeurt door analoge geluidsgolven te digitaliseren via een proces dat "sampling" wordt genoemd. Dit betekent dat de geluidsgolf op vaste tijdsintervallen wordt gemeten en deze metingen worden opgeslagen als discrete waarden.</p>
+<p>Sampling: Het proces van het omzetten van analoge signalen naar digitale gegevens door metingen op regelmatige intervallen.</p>
+<p>Sample Rate: Het aantal metingen per seconde, uitgedrukt in Hertz (Hz). Een hogere sample rate resulteert in een nauwkeurigere reproductie van het oorspronkelijke geluid.
+</p>
+<h3>Voorbeeld van sample rates:</h3>
+<p>
 44.1 kHz: Gebruikt voor cd-kwaliteit audio.
 48 kHz: Gebruikt voor professioneel videowerk.
-96 kHz: Gebruikt voor high-definition audio-opnames.
-Tekstcompressie
-Tekstcompressie is een techniek om de hoeveelheid opslagruimte die nodig is voor tekstgegevens te verminderen. Er zijn verschillende methoden voor tekstcompressie, waaronder lossless en lossy compressie.
-
-Lossless compressie: Verkleint bestanden zonder verlies van informatie. Veelgebruikte technieken zijn Huffman-codering en Run-Length Encoding (RLE). Dit wordt vaak gebruikt voor tekst en andere gegevens waar nauwkeurigheid essentieel is.
-Lossy compressie: Verkleint bestanden door sommige gegevens permanent te verwijderen, wat resulteert in enig kwaliteitsverlies. Dit wordt meestal gebruikt voor multimedia, zoals afbeeldingen, audio en video.
-Voorbeeld van compressiealgoritmen:
-
-ZIP: Een veelgebruikte lossless compressiemethode voor bestanden.
-JPEG: Een lossy compressiemethode voor afbeeldingen, waarbij minder belangrijke gegevens worden verwijderd om de bestandsgrootte te verkleinen.
-
+96 kHz: Gebruikt voor high-definition audio-opnames.</p>
+<h2>Tekstcompressie</h2>
+<p>Tekstcompressie is een techniek om de hoeveelheid opslagruimte die nodig is voor tekstgegevens te verminderen. Er zijn verschillende methoden voor tekstcompressie, waaronder lossless en lossy compressie.</p>
+<p>Lossless compressie: Verkleint bestanden zonder verlies van informatie. Veelgebruikte technieken zijn Huffman-codering en Run-Length Encoding (RLE). Dit wordt vaak gebruikt voor tekst en andere gegevens waar nauwkeurigheid essentieel is.</p>
+<p>Lossy compressie: Verkleint bestanden door sommige gegevens permanent te verwijderen, wat resulteert in enig kwaliteitsverlies. Dit wordt meestal gebruikt voor multimedia, zoals afbeeldingen, audio en video.
+</p>
+<h3>Voorbeeld van compressiealgoritmen:
+</h3>
+<p>ZIP: Een veelgebruikte lossless compressiemethode voor bestanden.
+</p>J
+<p>PEG: Een lossy compressiemethode voor afbeeldingen, waarbij minder belangrijke gegevens worden verwijderd om de bestandsgrootte te verkleinen.
+</p>
   </body>
 </html>
