--- a/info.html
+++ b/info.html
@@ -14,9 +14,8 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
-    <p>
-    Naam: Joël
-    Leeftijd: 15 jaar
-    Hobby's: Klussen, zeilen en scouting</p>
+<p>Naam: Joël</p>
+<p>Leeftijd: 15 jaar</p>    
+<p>Hobby's: Klussen, zeilen en scouting</p>
   </body>
 </html>
