--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html> <!--dit is de tweede pagina van mijn site-->
 <html> <!--dit is het html element-->
   <head>
+    <!-- De title van de pagina die verschijnt in het tabblad van de browser -->
     <title>Binair stelsel</title>
+    <!-- Instellen van de karaktercodering voor de pagina -->
     <meta charset="utf-8">
+    <!-- Link naar het externe CSS-bestand voor de opmaak van de pagina -->
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+     <!-- Navigatie menu -->
     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="info.html"> over mij</a></li>
@@ -14,23 +18,35 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
+    <!-- Hoofdtitel van de pagina -->
     <h1>Het binair stelsel</h1>
+    <!-- Inleidende paragraaf over het binaire stelsel -->
     <p>Het binair stelsel, ook wel het binaire getalsysteem genoemd, is een manier om getallen te representeren die alleen gebruik maakt van twee symbolen: 0 en 1. Dit systeem is de basis van digitale elektronica en computers, omdat deze machines werken met twee toestanden: aan (1) en uit (0).</p>
+    <!-- Subtitel voor de basisprincipes sectie -->
     <h2>Basisprincipes van het Binair Stelsel</h2>
+    <!-- Uitleg van de basisprincipes van het binaire stelsel -->
     <p> in tegenstelling tot het decimale stelsel, dat een basis van 10 heeft (met cijfers van 0 tot 9), heeft het binair stelsel een basis van 2. Dit betekent dat elke positie in een binair getal een macht van 2 vertegenwoordigt, in plaats van een macht van 10.</p>
+    <!-- Subtitel voor het voorbeeld sectie -->
     <h2>Voorbeeld van een binair getal:</h2>
+    <!-- Uitleg van een voorbeeld van een binair getal en hoe het om te zetten naar decimaal -->
     <p>Het binaire getal 1101 kan als volgt worden geïnterpreteerd:</p>
     <p>
+       <!-- Tabel voor de positiewaarden van het binaire getal -->
       | Positie  | 3 | 2 | 1 | 0 |
       |----------|---|---|---|---|
       | Binair   | 1 | 1 | 0 | 1 |
+       <!-- Uitleg van hoe elke positie wordt berekend en opgeteld -->
       Om dit om te zetten naar een decimaal getal, berekenen we de waarde van elke positie:
       \[ (1 \times 2^3) + (1 \times 2^2) + (0 \times 2^1) + (1 \times 2^0) = 8 + 4 + 0 + 1 = 13 \]
       Dus, het binaire getal 1101 is gelijk aan het decimale getal 13.
     </p>
+    <!-- Subtitel voor de sectie waarom het binaire stelsel wordt gebruikt -->
     <h2>Waarom het Binair Stelsel?</h2>
+    <!-- Uitleg waarom computers het binaire stelsel gebruiken -->
     <p>Computers gebruiken het binaire stelsel omdat het betrouwbaar en eenvoudig te implementeren is met digitale schakelingen. Elektronische componenten zoals transistors kunnen gemakkelijk twee toestanden representeren: aan (hoog voltage) en uit (laag voltage). Dit maakt het binaire stelsel ideaal voor het verwerken en opslaan van gegevens in computersystemen.</p>
+    <!-- Subtitel voor de sectie over meer leren -->
     <h2>Meer Leren over Binair Stelsel</h2>
+    <!-- Link naar een externe website voor meer informatie over het binaire stelsel -->
     <p>Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan [Binary Bonanza](https://www.binarybonanza.com) voor verdere exploratie en leuke oefeningen. Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.</p>
   </body>
 </html>
