--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -47,6 +47,6 @@
     <!-- Subtitel voor de sectie over meer leren -->
     <h2>Meer Leren over Binair Stelsel</h2>
     <!-- Link naar een externe website voor meer informatie over het binaire stelsel -->
-    <p>Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan [Binary Bonanza](https://www.binarybonanza.com) voor verdere exploratie en leuke oefeningen. Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.</p>
+    <p>Wil je meer weten over het binair stelsel en hoe je ermee kunt rekenen? Bezoek dan (https://games.penjee.com/binary-bonanza/) voor verdere exploratie en leuke oefeningen. Door het begrijpen van het binaire stelsel krijg je een beter inzicht in de fundamenten van digitale technologie en hoe computers werken.</p>
   </body>
 </html>
