--- a/compressietechnieken.html
+++ b/compressietechnieken.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html> <!--dit is de vijfde pagina van mijn site-->
 <html> <!--dit is het html element-->
   <head>
+     <!-- De <title> van de pagina die verschijnt in het tabblad van de browser -->
     <title>compressietechnieken</title>
+    <!-- Instellen van de karaktercodering voor de pagina -->
     <meta charset="utf-8">
+     <!-- Link naar het externe CSS-bestand voor de opmaak van de pagina -->
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <!-- Navigatie menu -->
     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="info.html"> over mij</a></li>
@@ -14,45 +18,64 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
+<!-- Subtitel voor de inleiding sectie -->
 <h2>Inleiding</h2>
+<!-- Inleidende paragraaf over beeld en geluid opslag -->
 <p>Beeld en geluid zijn essentieel in onze digitale wereld, en het begrijpen van hoe ze worden opgeslagen en verwerkt helpt ons de technologie beter te benutten. Deze pagina behandelt de opslag van beeld en geluid, de verschillen tussen bitmap- en vectorafbeeldingen, en relevante onderwerpen zoals sampling, sample rate en tekstcompressie.</p>
+<!-- Subtitel voor de bitmapafbeeldingen sectie -->
 <h2>Bitmapafbeeldingen</h2>
+<!-- Beschrijving van wat bitmapafbeeldingen zijn -->
 <p>Bitmapafbeeldingen, ook bekend als rasterafbeeldingen, bestaan uit een raster van pixels. Elke pixel heeft een specifieke kleurwaarde, en samen vormen ze het volledige beeld.</p>
+<!-- Sub-subtitel voor de kenmerken van bitmapafbeeldingen -->
 <h3>Kenmerken van bitmapafbeeldingen:</h3>
 <p>
 Resolutie-afhankelijk: De kwaliteit van een bitmapafbeelding hangt af van de resolutie. Bij vergroting kunnen pixels zichtbaar worden, wat resulteert in verlies van scherpte.
 Bestandsformaten: Veelgebruikte formaten zijn JPEG, PNG, BMP en GIF.
 </p>
-<h3>Voorbeeld: Foto's en digitale schilderijen.
-</h3>
+<!-- Voorbeeld van bitmapafbeeldingen -->
+<h3>Voorbeeld: Foto's en digitale schilderijen.</h3>
+<!-- Beschrijving van vectorafbeeldingen -->
 <p>Vectorafbeeldingen</p>
 <p>Vectorafbeeldingen zijn gebaseerd op geometrische vormen zoals lijnen, cirkels en polygonen. Ze worden beschreven met wiskundige formules in plaats van pixels.</p>
+ <!-- Sub-subtitel voor de kenmerken van vectorafbeeldingen -->
 <h3>Kenmerken van vectorafbeeldingen:</h3>
+<!-- Kenmerken van vectorafbeeldingen -->
 <p>
 Resolutie-onafhankelijk: Vectorafbeeldingen kunnen zonder kwaliteitsverlies worden geschaald. Dit maakt ze ideaal voor logo's en illustraties.
 Bestandsformaten: Veelgebruikte formaten zijn SVG, AI en EPS.
 Voorbeeld: Logo's, iconen en technische tekeningen.
 </p>
+<!-- Subtitel voor de geluidsopslag sectie -->
 <h2>Geluidsopslag</h2>
+<!-- Beschrijving van geluidsopslag in digitale vorm -->
 <p>Geluidsopslag in digitale vorm gebeurt door analoge geluidsgolven te digitaliseren via een proces dat "sampling" wordt genoemd. Dit betekent dat de geluidsgolf op vaste tijdsintervallen wordt gemeten en deze metingen worden opgeslagen als discrete waarden.</p>
+<!-- Uitleg over sampling -->
 <p>Sampling: Het proces van het omzetten van analoge signalen naar digitale gegevens door metingen op regelmatige intervallen.</p>
+<!-- Uitleg over sample rate -->
 <p>Sample Rate: Het aantal metingen per seconde, uitgedrukt in Hertz (Hz). Een hogere sample rate resulteert in een nauwkeurigere reproductie van het oorspronkelijke geluid.
 </p>
+<!-- Sub-subtitel voor voorbeelden van sample rates -->
 <h3>Voorbeeld van sample rates:</h3>
 <p>
+<!-- Voorbeelden van verschillende sample rates -->
 44.1 kHz: Gebruikt voor cd-kwaliteit audio.
 48 kHz: Gebruikt voor professioneel videowerk.
 96 kHz: Gebruikt voor high-definition audio-opnames.</p>
+<!-- Subtitel voor de tekstcompressie sectie -->
 <h2>Tekstcompressie</h2>
+<!-- Beschrijving van tekstcompressie en verschillende methoden -->
 <p>Tekstcompressie is een techniek om de hoeveelheid opslagruimte die nodig is voor tekstgegevens te verminderen. Er zijn verschillende methoden voor tekstcompressie, waaronder lossless en lossy compressie.</p>
+<!-- Uitleg over lossless compressie -->
 <p>Lossless compressie: Verkleint bestanden zonder verlies van informatie. Veelgebruikte technieken zijn Huffman-codering en Run-Length Encoding (RLE). Dit wordt vaak gebruikt voor tekst en andere gegevens waar nauwkeurigheid essentieel is.</p>
+<!-- Uitleg over lossy compressie -->
 <p>Lossy compressie: Verkleint bestanden door sommige gegevens permanent te verwijderen, wat resulteert in enig kwaliteitsverlies. Dit wordt meestal gebruikt voor multimedia, zoals afbeeldingen, audio en video.
 </p>
+<!-- Sub-subtitel voor voorbeelden van compressiealgoritmen -->
 <h3>Voorbeeld van compressiealgoritmen:
 </h3>
+<!-- Voorbeelden van compressiealgoritmen -->
 <p>ZIP: Een veelgebruikte lossless compressiemethode voor bestanden.
 </p>J
 <p>PEG: Een lossy compressiemethode voor afbeeldingen, waarbij minder belangrijke gegevens worden verwijderd om de bestandsgrootte te verkleinen.
 </p>
   </body>
-</html>
