--- a/info.html
+++ b/info.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html> <!--dit is de eerste pagina van mijn site-->
 <html> <!--dit is het html element-->
   <head>
+    <!-- De <title> van de pagina die verschijnt in het tabblad van de browser -->
     <title>Binair stelsel</title>
+    <!-- Instellen van de karaktercodering voor de pagina -->
     <meta charset="utf-8">
+    <!-- Link naar het externe CSS-bestand voor de opmaak van de pagina -->
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <!-- Navigatie menu -->
     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="info.html"> over mij</a></li>
@@ -14,6 +18,7 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
+    <!-- Informatie over mij -->
 <p>Naam: Joël</p>
 <p>Leeftijd: 15 jaar</p>    
 <p>Hobby's: Klussen, zeilen en scouting</p>
