--- a/informatie.html
+++ b/informatie.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html> <!--dit is de vierde pagina van mijn site-->
 <html> <!--dit is het html element-->
   <head>
+    <!-- De <title> van de pagina die verschijnt in het tabblad van de browser -->
     <title>Werking computer</title>
+    <!-- Instellen van de karaktercodering voor de pagina -->
     <meta charset="utf-8">
+    <!-- Link naar het externe CSS-bestand voor de opmaak van de pagina -->
     <link rel="stylesheet" type="text/css" href="opmaak.css">
   </head>
   <body>
+    <!-- Navigatie menu -->
     <ul>
       <li><a href="index.html"> Home</a></li>
       <li><a href="info.html"> over mij</a></li>
@@ -14,36 +18,53 @@
       <li><a href="informatie.html">werking computer</a></li>
       <li><a href="compressietechnieken.html">compressietechnieken</a></li>
     </ul>
-    
+
+<!-- Uitleg over hoe een computer werkt -->    
 <p>Een computer voert zijn taken uit door een reeks processen te doorlopen, namelijk invoer, verwerking, uitvoer en opslag. Elk van deze stappen speelt een cruciale rol in hoe een computer werkt.</p>
+ <!-- Titel voor de invoerfase -->
 <h2>1. Invoer (Input)</h2>
+<!-- Uitleg over de invoerfase -->
 <p>De invoerfase is het proces waarbij gegevens en instructies aan de computer worden gegeven. Dit kan via verschillende invoerapparaten zoals toetsenborden, muizen, scanners, microfoons en camera's. Invoergegevens kunnen bijvoorbeeld tekst, geluid, afbeeldingen of andere vormen van informatie zijn.
 </p>
+ <!-- Subtitel voor voorbeelden van invoerapparaten -->
 <h3>Voorbeelden van invoerapparaten:</h3>
+<!-- Voorbeelden van verschillende invoerapparaten -->
 <p>
 Toetsenbord: Voor het typen van tekst.
 Muis: Voor het aanwijzen en klikken op items op het scherm.
 Scanner: Voor het digitaliseren van fysieke documenten.
 Microfoon: Voor het opnemen van geluid.</p>
+<!-- Titel voor de verwerkingsfase -->
 <h2>2. Verwerking (Processing)</h2>
+<!-- Uitleg over de verwerkingsfase -->
 <p>Verwerking is de kern van de computerwerking. Dit gebeurt in de centrale verwerkingseenheid (CPU). De CPU voert instructies uit die zijn verkregen uit het geheugen (RAM) en verwerkt de ingevoerde gegevens. Dit kan variëren van eenvoudige wiskundige berekeningen tot complexe operaties zoals het draaien van softwareprogramma's.</p>
+<!-- Subtitel voor belangrijke onderdelen betrokken bij verwerking -->
 <h3>Belangrijke onderdelen betrokken bij verwerking:</h3>
+<!-- Beschrijving van belangrijke onderdelen in de verwerking -->
 <p>
 CPU: De centrale verwerkingseenheid voert de bewerkingen uit.
 RAM: Het werkgeheugen waar tijdelijke gegevens en programma's worden opgeslagen tijdens het uitvoeren.
 Moederbord: Verbindt alle componenten van de computer en laat hen samenwerken.
 </p>
+<!-- Titel voor de uitvoerfase -->
 <h2>3. Uitvoer (Output)</h2>
+<!-- Uitleg over de uitvoerfase -->
 <p>Na de verwerking moet de computer de resultaten weergeven of uitvoeren. Dit gebeurt via uitvoerapparaten zoals monitoren, printers, luidsprekers en projectoren. Uitvoer kan bijvoorbeeld een geprint document zijn, een geluidssignaal, een weergegeven beeld op het scherm of andere vormen van resultaten die voor de gebruiker zichtbaar of hoorbaar zijn.</p>
+<!-- Subtitel voor voorbeelden van uitvoerapparaten -->
 <h3>Voorbeelden van uitvoerapparaten:</h3>
+<!-- Voorbeelden van verschillende uitvoerapparaten -->
 <p>
 Monitor: Voor het weergeven van beelden en tekst.
 Printer: Voor het afdrukken van documenten.
 Luidsprekers: Voor het afspelen van geluid.
 Projector: Voor het projecteren van beelden op een groter scherm.</p>
+ <!-- Titel voor de opslagfase -->
 <h2>4. Opslag (Storage)</h2>
+<!-- Uitleg over de opslagfase -->
 <p>Opslag is de fase waarin gegevens permanent worden bewaard voor toekomstig gebruik. Opslagapparaten kunnen gegevens opslaan voor korte of lange termijn. Gegevens die op de harde schijf, SSD (Solid State Drive), USB-sticks of cloud-opslag worden geplaatst, kunnen later worden opgevraagd en gebruikt.</p>
+<!-- Subtitel voor voorbeelden van opslagapparaten -->
 <h3>Voorbeelden van opslagapparaten:</h3>
+<!-- Voorbeelden van verschillende opslagapparaten -->
 <p>
 Harde schijf (HDD): Mechanische schijven die grote hoeveelheden gegevens kunnen opslaan.
 Solid State Drive (SSD): Snellere en betrouwbaardere opslag dan traditionele harde schijven.
